fixed tablet header align and color of shop now

--- a/src/component/DynamicContentCircleItemSlider/DynamicContentCircleItemSlider.style.scss
+++ b/src/component/DynamicContentCircleItemSlider/DynamicContentCircleItemSlider.style.scss
@@ -5,13 +5,13 @@
   @include tablet {
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 23px !important;
+    margin-top: 13px !important;
     margin-bottom: 15px !important;
   }
   @include mobile {
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 23px !important;
+    margin-top: 13px !important;
   }
 
   .CircleSliderWrapper.active {
