--- a/src/component/HeaderLogo/HeaderLogo.style.scss
+++ b/src/component/HeaderLogo/HeaderLogo.style.scss
@@ -9,22 +9,19 @@
   }
     .Image {
     height: 22px;
-    width: 30%;
     // background-color: #fff;
 
     @include before-desktop {
-      display: block;
+      // display: block;
       padding: 0;
-      margin-left: calc(35% + 30px);
-      margin-right: calc(35% - 30px);
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
       height: 25px;
-      &_isArabic {
-        margin-left: calc(35% - 19px);
-        margin-right: calc(35% + 19px);
-      }
     }
     @include desktop {
+      width: 30%;
       height: 34px;
       margin-top: 0;
       padding: 0;
