--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -314,7 +314,7 @@ main {
       width: 100%;
       justify-content: center;
       align-items: center;
-      height: 60px;
+      height: 54px;
       top: 49px;
     }
     @include tablet {
@@ -324,7 +324,7 @@ main {
       width: 100%;
       justify-content: center;
       align-items: center;
-      height: 60px;
+      height: 54px;
       top: 49px;
     }
     @include after-mobile {
@@ -338,10 +338,10 @@ main {
         display: flex;
         background: $white;
         width: 100%;
-        height: 43px;
+        height: 51px;
         align-items: center;
         margin-top: 0px;
-        top: 108px !important;
+        top: 100px !important;
         position: fixed;
         justify-content: center;
       }
@@ -362,10 +362,10 @@ main {
         display: flex;
         background: $white;
         width: 100%;
-        height: 43px;
+        height: 51px;
         align-items: center;
         margin-top: 0px;
-        top: 108px !important;
+        top: 100px !important;
         position: fixed;
         justify-content: center;
       }
