--- a/src/component/HeaderTopBar/HeaderTopBar.style.scss
+++ b/src/component/HeaderTopBar/HeaderTopBar.style.scss
@@ -6,12 +6,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex:0.6;
+  flex: 0.6;
   min-height: 31px;
   box-shadow: none;
   width: 100%;
   position: fixed;
-  bottom: 70px;
+  bottom: 82px;
   z-index: 4;
   background: $black;
   transition: 0.5s ease-in-out;
@@ -74,6 +74,9 @@
     display: flex;
     align-items: center;
     flex: 1;
+    @include before-desktop() {
+      display: none;
+    }
   }
 
   .LanguageSwitcher {
