--- a/src/component/MenuCategory/MenuCategory.style.scss
+++ b/src/component/MenuCategory/MenuCategory.style.scss
@@ -341,7 +341,11 @@
 
       .DynamicContent {
         background-color: var(--red);
-
+        .DynamicContentBanner{
+          button:hover {
+            color: var(--white);
+          }
+        }
         .MenuBrands {
           &-ContentWrapper {
             &-Brands {
