--- a/src/component/MobileBottomBar/MobileBottomBar.style.scss
+++ b/src/component/MobileBottomBar/MobileBottomBar.style.scss
@@ -59,7 +59,7 @@
   display: flex;
   z-index: 90;
   background: $white;
-  height: 70px;
+  height: 80px;
   position: fixed;
   bottom: 0;
   width: 100%;
